--- a/public/scss/style.sass
+++ b/public/scss/style.sass
@@ -41,6 +41,7 @@ html
 
 .quote
   background-color: white
+  color: #6A2B7D
 
   h1
     font-family: 'Open Sans', sans-serif
@@ -60,9 +61,51 @@ html
 img.device
   max-width: 90%
   max-height: 80%
-  opacity: 0.5
-  -webkit-opacity: 50%
 
+.landing
+  background-color: #e8bf00
+  background-image: url('/images/logo.png')
+  background-attachment: fixed
+  background-repeat: no-repeat
+  background-blend-mode: lighten
+  background-position: center
+
+.github
+  padding-top: 300px
+
+.github-logo-container
+  background-color: white
+  border-color: white
+
+.github-logo
+  width: 22px
+  height: 22px
+
+.github-clone-xs
+  font-family: 'Droid Sans Mono'
+  font-style: bold
+  font-size: large
+  color: black
+  background-color: rgba(255, 255, 255, 0.3)
+  border-color: white
+  cursor: pointer
+
+.github-clone-xs:hover
+  color: black
+  background-color: white
+
+.github-clone
+  font-family: 'Droid Sans Mono'
+  font-style: bold
+  font-size: small
+  color: black
+  background-color: rgba(255, 255, 255, 0.3)
+  border-color: white
+  cursor: pointer
+
+.github-clone:hover
+  color: black
+  background-color: white
 
 // Examples
 
@@ -88,3 +131,6 @@ img.device
 
 .code-blue
   color: #2539d7
+
+.code-comment
+  color: #368222
