--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -11,7 +11,12 @@
     </div>
   </div>
   <div class="row full-height snippet">
-    <div class="col-md-offset-6 col-md-3 text-left vertical-center">
+    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-6 col-md-3 text-left vertical-center">
+      <span class="code-comment">
+        /**<br>
+        This is the syntax. Establishing position and dimension attributes is really straightforward as well as creating relationships between items.<br>
+        */
+      </span><br><br>
       <span class="code-green">red</span> <- [<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">*0.5</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
@@ -23,41 +28,14 @@
     </div>
   </div>
 
-  <div class="row full-height snippet">
-    <div class="col-md-offset-6 col-md-6 text-left vertical-center">
-      /**<br>
-      <br>
-      */<br><br>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-3 text-left">
-            blue <- [<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Size(80),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top(10),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Left(10)<br>
-            ]<br><br>
-            green <- [<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top(10),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Left(10).to(blue),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Right(10)),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Height(>=0)<br>
-            ]
-          </div>
-          <div class="col-md-4 text-left">
-            grey <- [<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top(0).to(green),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Left(0).to(blue),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Right(10),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Height(>=0)<br>
-            ]<br><br>
-            red <- [<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top(0), Right(0), Left(0),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Height(>=100).with(.MediumPriority),<br>
-            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bottom(10).to(grey, .Bottom)<br>
-            ]
-          </div>
-        </div>
+  <div class="row full-height landing">
+    <div class="col-md-offset-4 col-md-4 text-center github vertical-center">
+      <div class="input-group input-group-lg hidden-xs hidden-sm">
+        <span class="input-group-addon github-logo-container" id="sizing-addon1"><img class="github-logo" src="images/github-logo.png"></span>
+        <span class="form-control github-clone github-link">git@github.com:nakiostudio/EasyPeasy.git</span>
       </div>
+
+      <button type="button" class="btn btn-secondary github-clone-xs hidden-md hidden-lg hidden-xl github-link">Check it on Github</button>
     </div>
   </div>
 </div>
