--- a/views/background_layer.erb
+++ b/views/background_layer.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid full-height background-layer">
+<div class="container-fluid full-height background-layer hidden-xs hidden-sm">
   <div class="row full-height">
     <div class="col-md-offset-3 col-md-3 text-center vertical-center">
       <img class="device" src="<%= url('/images/device.png') %>">
