--- a/views/screen_layer.erb
+++ b/views/screen_layer.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid full-height screen-layer">
+<div class="container-fluid full-height screen-layer hidden-xs hidden-sm">
   <div class="row full-height">
     <div class="col-md-offset-3 col-md-3 text-center vertical-center">
 
