--- a/public/scss/style.sass
+++ b/public/scss/style.sass
@@ -20,7 +20,6 @@ html
   -webkit-transform: translateX(-50%)
   -ms-transform: translateX(-50%)
 
-
 // Layers
 
 .screen-layer
@@ -40,7 +39,6 @@ html
 // Content sections
 
 .quote
-  background-color: white
   color: #6A2B7D
 
   h1
@@ -61,6 +59,7 @@ html
 img.device
   max-width: 90%
   max-height: 80%
+  opacity: 0.0
 
 .landing
   background-color: #e8bf00
