--- a/views/screen_layer.erb
+++ b/views/screen_layer.erb
@@ -6,12 +6,12 @@
   </div>
   <div class="row full-height">
     <div class="col-md-offset-3 col-md-3 text-center vertical-center">
-      <img class="device" src="<%= url('/images/snippet-1.png') %>">
+      <img class="device snippet-image-1" src="<%= url('/images/snippet-1.png') %>">
     </div>
   </div>
-  <div class="row full-height">
+  <!-- <div class="row full-height">
     <div class="col-md-offset-3 col-md-3 text-center vertical-center">
       <img class="device" src="<%= url('/images/snippet-2.png') %>">
     </div>
-  </div>
+  </div> -->
 </div>
