links to cocoapods and cocoadocs

--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -29,13 +29,10 @@
   </div>
 
   <div class="row full-height landing">
-    <div class="col-md-offset-4 col-md-4 text-center github vertical-center">
-      <div class="input-group input-group-lg hidden-xs hidden-sm">
-        <span class="input-group-addon github-logo-container" id="sizing-addon1"><img class="github-logo" src="images/github-logo.png"></span>
-        <span class="form-control github-clone github-link">git@github.com:nakiostudio/EasyPeasy.git</span>
-      </div>
-
-      <button type="button" class="btn btn-secondary github-clone-xs hidden-md hidden-lg hidden-xl github-link">Check it on Github</button>
+    <div class="col-md-offset-4 col-md-4 text-center links vertical-center">
+      <button type="button" class="btn btn-lg btn-secondary github-clone github-link">GitHub</button>&nbsp;
+      <button type="button" class="btn btn-lg btn-secondary github-clone cocoapods-link">CocoaPods</button>&nbsp;
+      <button type="button" class="btn btn-lg btn-secondary github-clone cocoadocs-link">CocoaDocs</button>
     </div>
   </div>
 </div>
