--- a/public/scss/style.sass
+++ b/public/scss/style.sass
@@ -69,59 +69,22 @@ img.device
   background-blend-mode: lighten
   background-position: center
 
-.github
-  padding-top: 300px
-
-.github-logo-container
-  background-color: white
-  border-color: white
-
-.github-logo
-  width: 22px
-  height: 22px
-
-.github-clone-xs
-  font-family: 'Droid Sans Mono'
-  font-style: bold
-  font-size: large
-  color: black
-  background-color: rgba(255, 255, 255, 0.3)
-  border-color: white
-  cursor: pointer
-
-.github-clone-xs:hover
-  color: black
-  background-color: white
+.links
+  padding-top: 200px
 
 .github-clone
+  width: 100px
   font-family: 'Droid Sans Mono'
   font-style: bold
   font-size: small
-  color: black
-  background-color: rgba(255, 255, 255, 0.3)
+  color: white
+  background-color: transparent
   border-color: white
   cursor: pointer
 
 .github-clone:hover
   color: black
   background-color: white
-
-// Examples
-
-.red-box-1
-  border-style: solid
-  border-color: red
-  border-width: 2
-  height: 100px
-  width: 50%
-  padding: 20px
-
-.blue-box-1
-  border-style: solid
-  border-color: blue
-  border-width: 2
-  width: 100%
-  height: 100%
 
 // Text
 
