fixed quote paddings

--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid full-height content-layer">
   <div class="row full-height quote">
-    <div class="col-md-12 text-center vertical-center">
-      <h1>“...if you prefer your Auto Layout hand<br>
-      crafted in code then you might want to<br>
-      have a look at this new library (...)<br>
-      There's plenty of libraries that give a<br>
-      new syntax to NSLayoutConstraints, but<br>
+    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 text-center vertical-center">
+      <h1>“...if you prefer your Auto Layout hand
+      crafted in code then you might want to
+      have a look at this new library (...)
+      There's plenty of libraries that give a
+      new syntax to NSLayoutConstraints, but
       I really liked the look of this one...”</h1>
       <h2>iOS Dev Weekly, issue 246</h2>
     </div>
