--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -30,9 +30,7 @@
 
   <div class="row full-height landing">
     <div class="col-md-offset-4 col-md-4 text-center links vertical-center">
-      <button type="button" class="btn btn-lg btn-secondary github-clone github-link">GitHub</button>&nbsp;
-      <button type="button" class="btn btn-lg btn-secondary github-clone cocoapods-link">CocoaPods</button>&nbsp;
-      <button type="button" class="btn btn-lg btn-secondary github-clone cocoadocs-link">CocoaDocs</button>
+      <button type="button" class="btn btn-lg btn-secondary github-clone github-link">It's EasyPeasy</button>
     </div>
   </div>
 </div>
