some more examples

--- a/public/scss/style.sass
+++ b/public/scss/style.sass
@@ -63,21 +63,12 @@ img.device
 
 .landing
   background-color: #e8bf00
-  background-image: url('/images/logo.png')
-  background-attachment: fixed
-  background-repeat: no-repeat
-  background-blend-mode: lighten
-  background-position: center
-
-.links
-  padding-top: 200px
 
 .github-clone
   font-family: 'Droid Sans Mono'
   font-style: bold
-  font-size: small
-  color: white
-  background-color: transparent
+  color: #e8bf00
+  background-color: white
   border-color: white
   cursor: pointer
 
