--- a/views/screen_layer.erb
+++ b/views/screen_layer.erb
@@ -9,9 +9,19 @@
       <img class="device snippet-image-1" src="<%= url('/images/snippet-1.png') %>">
     </div>
   </div>
-  <!-- <div class="row full-height">
+  <div class="row full-height">
     <div class="col-md-offset-3 col-md-3 text-center vertical-center">
-      <img class="device" src="<%= url('/images/snippet-2.png') %>">
+      <img class="device snippet-image-2" src="<%= url('/images/snippet-2.png') %>">
     </div>
-  </div> -->
+  </div>
+  <div class="row full-height">
+    <div class="col-md-offset-3 col-md-3 text-center vertical-center">
+      <img class="device snippet-image-3" src="<%= url('/images/snippet-3.png') %>">
+    </div>
+  </div>
+  <div class="row full-height">
+    <div class="col-md-offset-3 col-md-3 text-center vertical-center">
+      <img class="device snippet-image-4" src="<%= url('/images/snippet-4.png') %>">
+    </div>
+  </div>
 </div>
