--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -58,9 +58,9 @@
       <span class="code-green">blue</span> <- [<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">90.0</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
-      ].<span class="code-green">when</span>{<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Device()</span> == <span class="code-green">.iPhone</span>
-      <br>}<br>
+      ].<span class="code-green">when</span> {<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">$0.isPhone</span><br>
+      }<br>
     </div>
   </div>
 
@@ -73,6 +73,7 @@
         - Fast and hassle-free update of constraints.<br>
         - 100% code coverage.<br>
         - 75% documented code.<br>
+        - Compatible with iOS, macOS and tvOS.<br>
         */
       </span>
     </div>
@@ -80,7 +81,7 @@
 
   <div class="row full-height landing">
     <div class="col-md-offset-4 col-md-4 text-center links vertical-center">
-      <button type="button" class="btn btn-lg btn-secondary github-clone github-link">$> git clone git@github.com:nakiostudio/EasyPeasy.git</button>
+      <button type="button" class="btn btn-lg btn-secondary github-clone github-link">Get it on Github</button>
     </div>
   </div>
 </div>
