--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -10,7 +10,7 @@
       <h2>iOS Dev Weekly, issue 246</h2>
     </div>
   </div>
-  <div class="row full-height snippet">
+  <div class="row full-height snippet", id="first-snippet">
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-6 col-md-3 text-left vertical-center">
       <span class="code-comment">
         /**<br>
