added missing comma

--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -23,7 +23,7 @@
       ]<br><br>
       <span class="code-green">blue</span> <- [<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">20.0</span>).<span class="code-green">like</span>(<span class="code-green">red</span>),<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterX</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">red</span>)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterX</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">red</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterY</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">red</span>)<br>
       ]<br>
     </div>
