--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -17,15 +17,15 @@
         This is the syntax. Establishing position and dimension attributes is really straightforward as well as creating relationships between items.<br>
         */
       </span><br><br>
-      <span class="code-green">red</span> <- [<br>
+      <span class="code-green">red</span>.easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">*0.5</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
-      ]<br><br>
-      <span class="code-green">blue</span> <- [<br>
+      )<br><br>
+      <span class="code-green">blue</span>.easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">20.0</span>).<span class="code-green">like</span>(<span class="code-green">red</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterX</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">red</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterY</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">red</span>)<br>
-      ]<br>
+      )<br>
     </div>
   </div>
 
@@ -36,16 +36,16 @@
         It supports UILayoutGuides, just deal with them as you would do with a regular UIView.<br>
         */
       </span><br><br>
-      <span class="code-green">layoutGuide</span> <- [<br>
+      <span class="code-green">layoutGuide</span>easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">CGSize(220.0, 130.0)</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
-      ]<br><br>
-      <span class="code-green">red</span> <- [<br>
+      )<br><br>
+      <span class="code-green">red</span>easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Width</span>(<span class="code-blue">*0.5</span>).<span class="code-green">like</span>(<span class="code-green">layoutGuide</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Leading</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">layoutGuide</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterY</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">layoutGuide</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Height</span>(<span class="code-blue">50.0</span>),<br>
-      ]<br><br>...<br>
+      )<br><br>...<br>
     </div>
   </div>
 
@@ -56,12 +56,12 @@
         Easily apply lambdas to your constraints.<br>
         */
       </span><br><br>
-      <span class="code-green">blue</span> <- [<br>
+      <span class="code-green">blue</span>.easy.layout([<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">90.0</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
       ].<span class="code-green">when</span> {<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">$0.isPhone</span><br>
-      }<br>
+      })<br>
     </div>
   </div>
 
