updated syntax fix

--- a/views/content_layer.erb
+++ b/views/content_layer.erb
@@ -36,11 +36,11 @@
         It supports UILayoutGuides, just deal with them as you would do with a regular UIView.<br>
         */
       </span><br><br>
-      <span class="code-green">layoutGuide</span>easy.layout(<br>
+      <span class="code-green">layoutGuide</span>.easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Size</span>(<span class="code-blue">CGSize(220.0, 130.0)</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Center</span>(<span class="code-blue">0.0</span>)<br>
       )<br><br>
-      <span class="code-green">red</span>easy.layout(<br>
+      <span class="code-green">red</span>.easy.layout(<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Width</span>(<span class="code-blue">*0.5</span>).<span class="code-green">like</span>(<span class="code-green">layoutGuide</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">Leading</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">layoutGuide</span>),<br>
       &nbsp;&nbsp;&nbsp;&nbsp;<span class="code-green">CenterY</span>(<span class="code-blue">0.0</span>).<span class="code-green">to</span>(<span class="code-green">layoutGuide</span>),<br>
